jvm datastructure and gc